scss/_menu.scss
.header {
  height: 10vh;
  width: 100%;
  display: flex;
  align-items: center;
  justify-content: flex-end;
  position: fixed;
  top: 0;
  left: 0;
  z-index: 2;
  background-color: transparent;
  @include transition-ease;

  &.scroll {
    background-color: $secondary-color;
  }

  &__title {
    color: transparent;
    font-size: 1.5rem;
    text-transform: uppercase;
    margin-right: 5vw;
    @include transition-ease;

    &.scroll {
      color: $primary-color;
    }
  }
}

.menu-btn {
  position: absolute;
  z-index: 10;
  left: 1rem;
  top: 3vh;
  height: 20px;
  width: 28px;
  cursor: pointer;
  @include transition-ease;

  &__burger {
    position: absolute;
    right: 0;
    top: 0.5rem;
    width: 28px;
    height: 3px;
    background: set-text-color($secondary-color);
    @include transition-ease;

    &::before {
      content: '';
      position: absolute;
      top: -8px;
      width: 28px;
      height: 3px;
      background-color: set-text-color($secondary-color);
      @include transition-ease;
    }

    &::after {
      content: '';
      position: absolute;
      top: 8px;
      width: 28px;
      height: 3px;
      background-color: set-text-color($secondary-color);
      @include transition-ease;
    }

    &.open {
      transform: rotate(720deg);
      background: transparent;

      &::before {
        transform: rotate(45deg) translate(5px, 8px);
        background-color: $accent-color;
      }

      &::after {
        transform: rotate(-45deg) translate(3px, -7px);
        background-color: $accent-color;
      }
    }
  }
}

.nav {
  position: fixed;
  top: 0;
  left: 0;
  width: 100vw;
  opacity: 0.98;
  visibility: hidden;

  &.open {
    visibility: visible;
    z-index: 5;
  }

  .menu-nav {
    display: flex;
    flex-flow: column wrap;
    align-items: center;
    justify-content: center;
    height: 100vh;
    overflow: hidden;
    background-color: $secondary-color;
    list-style-type: none;
    transform: translateY(-100%);
    @include transition-ease;

    &.open {
      transform: translateY(0);
    }

    &__item {
      transform: translateX(-100vw);
      @include transition-ease;

      &.open {
        transform: translateX(0);
      }
    }

    &__link {
      display: inline-block;
      font-size: 1.6rem;
      text-transform: uppercase;
      padding: 2rem 0;
      @include transition-ease;

      &:hover {
        color: $accent-color;
      }
    }
  }
}

.active {
  color: $accent-color;
}

@for $i from 1 through 5 {
  .menu-nav__item:nth-child(#{$i}) {
    transition-delay: ($i * 0.1s) + 0.15s;
  }
}

@media screen and (min-width: $md-breakpoint) {
  .menu-btn {
    display: none;
  }

  .header {
    display: none;
  }

  .nav {
    visibility: visible;
    z-index: 10;

    .menu-nav {
      height: 8vh;
      width: 100vw;
      display: flex;
      flex-flow: row;
      justify-content: space-evenly;
      align-items: center;
      overflow: hidden;
      background-color: $secondary-color;
      list-style-type: none;
      transform: none;
      border-bottom: 3px solid $accent-color;

      &__item {
        transform: none;
      }

      &__link {
        display: inline-block;
        font-size: 1.3rem;
        text-transform: uppercase;
        padding: 0;
        @include transition-ease;

        &:hover {
          color: $accent-color;
        }
      }
    }
  }
}

@media screen and (min-width: $lg-breakpoint) {
  .nav {
    .menu-nav {
      height: 10vh;

      &__link {
        font-size: 1.5rem;
      }
    }
  }
}

